# ragstack-ai

./: .gitignore  .gitmodules  .snyk  LICENSE.md  LICENSE.txt  PACKAGE_README.md  README.adoc  README.md  RELEASE.md  package-lock.json  pyproject.toml  tox.ini
docker/multistage/: Dockerfile  pyproject.toml
libs/colbert/: README.md  pyproject.toml  test.py  tox.ini
libs/colbert/ragstack_colbert/: __init__.py  base_database.py  base_embedding.py  base_embedding_model.py  base_embeddings.py  base_retriever.py  base_vector_store.py  cassandra_database.py  cassandra_retriever.py  cassandra_store.py  cassandra_vector_store.py  chunk_encoder.py  chunks.py  cobert_retriever.py  colbert_embedding.py  colbert_embedding_model.py  colbert_embeddings.py  colbert_retriever.py  colbert_store.py  colbert_vector_store.py  constant.py  objects.py  retriever.py  text_encoder.py  vector_store.py
libs/colbert/ragstack_colbert/distributed/: __init__.py  chunk_encoder.py  runner.py
libs/colbert/tests/integration_tests/: conftest.py  test_colbert_baseline_embeddings.py  (+4 more)
libs/e2e-tests/: pyproject.langchain.toml  pyproject.llamaindex.toml  pyproject.ragstack-ai.toml  pyproject.toml  tox.ini
libs/e2e-tests/benchmarks/: .gitignore  testcases.py
libs/e2e-tests/e2e_tests/: conftest.py
libs/knowledge-graph/: README.md  pyproject.toml  tox.ini
libs/knowledge-graph/notebooks/: notebook.ipynb
libs/knowledge-graph/ragstack_knowledge_graph/: cassandra_graph_store.py  extraction.py  knowledge_graph.py  knowledge_schema.py  render.py  runnables.py  schema_inference.py  templates.py  traverse.py  utils.py
libs/knowledge-graph/tests/: conftest.py  test_extraction.py  test_knowledge_graph.py  test_runnables.py  test_schema_inference.py  test_traverse.py
libs/knowledge-store/: README.md  pyproject.toml  tox.ini
libs/knowledge-store/notebooks/: astra_support.ipynb  pdf_keybert.ipynb
libs/knowledge-store/ragstack_knowledge_store/: __init__.py  _mmr_helper.py  _utils.py  base.py  cassandra.py  compare_retrieval.py  concurrency copy.py  concurrency.py  content.py  directed_edge_extractor.py  edge_extractor.py  embedding_model.py  explicit_edge_extractor.py  graph_embed_legal.py  graph_query_legal.py  graph_query_legal_tags_async.py  graph_store.py  graph_store_tags.py  graph_store_tags_async.py  html_link_edge_extractor.py  keybert_link_extractor.py  knowledge_store.py  langchain_cassandra.py  langchain_cassandra_tags.py  langchain_cassandra_tags_async.py  link_tag.py  links.py  math.py  metadata.py  metadata_size.py  parent_edge_extractor.py  undirected_edge_extractor.py
libs/knowledge-store/tests/: conftest.py  test_graph_store.py  test_knowledge_store.py
libs/langchain/: README.md  pyproject.toml  tox.ini
libs/langflow/: README.md  pyproject.toml  tox.ini
libs/llamaindex/: README.md  pyproject.toml  tox.ini
libs/ragstack-ai-langchain/: README.md  pyproject.toml  tox.ini
libs/ragstack-ai-langchain/tests/: test_ragstack.py
libs/ragstack-ai-llamaindex/: README.md  pyproject.toml  tox.ini
libs/ragstack-ai-llamaindex/ragstack_ai_llamaindex/: __init__.py
libs/ragstack-ai-llamaindex/tests/: test_ragstack_llamaindex.py
libs/ragulate/: .gitignore  Makefile  README.md  colbert_chunk_size_and_k.py  example_config.yaml  open_ai_chunk_size_and_k.py  pyproject.toml  tox.ini
libs/ragulate/ragstack_ragulate/: analysis.py  cli.py  dashboard.py  debug.py  framework.py  logging_config.py  utils.py
libs/ragulate/scripts/: test_integration_runner.py  test_unit_runner.py
libs/tests-utils/: README.md  pyproject.toml  tox.ini
libs/tests-utils/ragstack_tests_utils/: __init__.py  cassandra_container.py  test_data.py  test_store.py
ragstack-e2e-tests/: .env.template  nemo_guardrails.ipynb  pyproject.langchain.toml  pyproject.llamaindex.toml  pyproject.ragstack-ai.toml  pyproject.toml  requirements.txt  tox.ini
ragstack-e2e-tests/benchmarks/: README.md  astra_db.py  astrapy_utils.py  benchmark_utils.py  evaluations.py  nemo_evaluations.py  runner.py  test_benchmark_script.py  testcases.py  visualize.py
ragstack-e2e-tests/benchmarks/reports/: embeddings_100_docs_256-openai_ada002.json  embeddings_10_docs_256-nvidia_nvolveqa40k.json  embeddings_10_docs_256-openai_ada002.json  embeddings_10_docs_512-nvidia_nvolveqa40k.json  embeddings_10_docs_512-openai_ada002.json  embeddings_50_docs_256-nvidia_nvolveqa40k.json  embeddings_50_docs_256-openai_ada002.json  embeddings_50_docs_512-nvidia_nvolveqa40k.json  embeddings_50_docs_512-openai_ada002.json  embeddings_single_doc_256-nvidia_nvolveqa40k.json  embeddings_single_doc_256-openai_ada002.json  embeddings_single_doc_512-nvidia_nvolveqa40k.json  embeddings_single_doc_512-openai_ada002.json
ragstack-e2e-tests/benchmarks/utils/: text_splitter.py
ragstack-e2e-tests/e2e_tests/: conftest.py  generated-test-report.txt  test_astra.py  test_compatibility_matrix.py
ragstack-e2e-tests/e2e_tests/compatibility_matrix/: conftest.py  test_compatibility_matrix.py  test_document_loaders.py
ragstack-e2e-tests/e2e_tests/langchain/: chat_application.py  nemo_guardrails.py  rag_application.py  test_astra.py  test_chat.py  test_compatibility_matrix.py  test_compatibility_rag.py  test_document_loaders.py  test_unstructured.py  trulens.py
ragstack-e2e-tests/e2e_tests/langchain_llamaindex/: test_astra.py
ragstack-e2e-tests/e2e_tests/llama_index/: __init__.py  conftest.py  environment.py  test_astra.py  test_chat.py  test_compatibility_rag.py  test_llama_index.py  test_llama_parse.py
ragstack-e2e-tests/e2e_tests/test_utils/: __init__.py  astradb_vector_store_handler.py  cassandra_container.py  cassandra_vector_store_handler.py  singleton.py  tracing.py  vector_store_handler.py
ragstack-e2e-tests/tests/e2e-tests/: conftest.py  test_astra.py  test_compatibility_matrix.py
ragstack/colbertbase/: .flake8  README.md  pyproject.toml
ragstack/colbertbase/colbertbase/: __init__.py  astra_colbert_embedding.py  astra_db.py  astra_retriever.py  constant.py  token_embedding.py
ragstack/colbertbase/tests/: test_astra_colbert_embeddings.py  test_astra_retriever.py
(+25112 files in other folders)
