[tool.poetry]
name = "ragstack-ai"
version = "1.0.8"
description = "DataStax RAGStack"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "PACKAGE_README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ragstack-ai-langchain = { version = "1.1.0", extras = ["colbert", "google", "nvidia"] }
ragstack-ai-llamaindex = { version = "1.0.6", extras = ["colbert", "google", "azure", "bedrock"] }
ragstack-ai-colbert = "1.0.5"

[tool.poetry.group.test.dependencies]
ragstack-ai-langchain = { path = "libs/langchain", develop = true, extras = ["colbert", "google", "nvidia"] }
ragstack-ai-llamaindex = { path = "libs/llamaindex", develop = true, extras = ["colbert", "google", "azure", "bedrock"] }
ragstack-ai-colbert = { path = "libs/colbert", develop = true }

pytest = "^7.3.0"
black = "*"
ruff = "*"

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"
yamllint = "^1.34.0"

[tool.poetry.group.notebooks.dependencies]
nbmake = "*"
astrapy = "*"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
