[tool.poetry]
name = "ragstack-e2e-tests"
version = "0.1.0"
description = "RAGStack tests"
license = ""
authors = ["DataStax"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyperf = "^2.6.2"
matplotlib = "^3.8.2"


[tool.poetry.group.test.dependencies]
pytest = "*"
black = "*"
ruff = "*"
google-cloud-aiplatform = "^1.36.4"
langchain-google-genai = "^0.0.4"
langchain-nvidia-ai-endpoints = "^0.0.1"
boto3 = "^1.29.6"
huggingface-hub = "^0.19.4"
azure-storage-blob = "^12.19.0"
pillow = "^10.2.0"

# From LangChain optional deps, needed by WebBaseLoader
beautifulsoup4 = "^4"

ragstack-ai = { path = "../", develop = false }
# we need this specific feature from cassio: https://github.com/CassioML/cassio/pull/128
cassio = "~0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 250

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"