[tool.poetry]
name = "ragstack-e2e-tests"
version = "0.1.0"
description = "RAGStack tests"
license = ""
authors = ["DataStax"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.test.dependencies]
pytest = "*"
black = "*"
ruff = "*"
google-cloud-aiplatform = "^1.36.4"
langchain-google-genai = "^0.0.4"
langchain-nvidia-ai-endpoints = "^0.0.1"
boto3 = "^1.29.6"
huggingface-hub = "^0.19.4"
azure-storage-blob = "^12.19.0"
pillow = "^10.2.0"
trulens-eval = { git = "https://github.com/truera/trulens.git", branch = "piotrm/dedup_async", subdirectory = "trulens_eval" }

# From LangChain optional deps, needed by WebBaseLoader
beautifulsoup4 = "^4"

langchain = { git = "https://github.com/langchain-ai/langchain.git", branch = "master", subdirectory = "libs/langchain", extras = [
    "openai",
] }
langchain_core = { git = "https://github.com/langchain-ai/langchain.git", branch = "master", subdirectory = "libs/core" }
langchain_community = { git = "https://github.com/langchain-ai/langchain.git", branch = "master", subdirectory = "libs/community" }
llama-index = { version = "0.9.29", extras = ["langchain"] }
astrapy = "~0.6.2"
# we need this specific feature from cassio: https://github.com/CassioML/cassio/pull/128
cassio = "~0.1.4"

# benchmarks
pyperf = "^2.6.2"
matplotlib = "^3.8.2"
prettytable = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 250

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
