[tool.poetry]
name = "ragstack-e2e-tests"
version = "0.1.0"
description = "RAGStack tests"
license = ""
authors = ["DataStax"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12,!=3.9.7"


[tool.poetry.group.test.dependencies]
pytest = "*"
black = "*"
ruff = "*"
boto3 = "^1.34.21"
huggingface-hub = "^0.20.3"
azure-storage-blob = "^12.19.0"
pillow = "^10.2.0"
testcontainers = "^3.7.1"
python-dotenv = "^1.0.1"
trulens-eval = "^0.21.0"

# From LangChain optional deps, needed by WebBaseLoader
beautifulsoup4 = "^4"

ragstack-ai = { path = "../", develop = false, extras = ["langchain-google", "langchain-nvidia"]}
# we need this specific feature from cassio: https://github.com/CassioML/cassio/pull/128
cassio = "~0.1.4"

# benchmarks
pyperf = "^2.6.2"
matplotlib = "^3.8.2"
prettytable = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 250

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
