[tool.poetry]
name = "ragstack-multistage-docker"
version = "0.1.0"
description = "example of ragstack multistage docker build"
authors = ["ming luo <itestmycode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "3.0.0"
openai = "0.28.0"
ragstack-ai = "0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
