[tool.poetry]
name = "ragstack-ai-colbert"
version = "1.0.4"
description = "DataStax RAGStack Colbert implementation"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_colbert" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
colbert-ai = "0.2.19"
pyarrow = "14.0.1"
torch = "2.2.1"
cassio = "~0.1.7"
pydantic = "^2.7.1"

[tool.poetry.group.test.dependencies]
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"

