[tool.poetry]
name = "ragstack-ai-colbert"
version = "1.0.6"
description = "DataStax RAGStack Colbert implementation"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_colbert" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
colbert-ai = "0.2.19"
pyarrow = "14.0.1"
torch = "2.2.1"
cassio = "~0.1.7"
pydantic = "^2.7.1"

# Workaround for https://github.com/pytorch/pytorch/pull/127921
# Remove when we upgrade to pytorch 2.4
setuptools = { version = ">=70", python = ">=3.12" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"

[tool.poetry.group.test.dependencies]
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }
pytest-asyncio = "^0.23.6"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "colbert.*,cassandra.cluster.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
