[tool.poetry]
name = "ragstack-e2e-tests"
version = "0.0.1.pre"
description = "RAGStack tests"
license = ""
authors = ["DataStax"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13,!=3.9.7"

[tool.poetry.group.test.dependencies]
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }
black = "*"
ruff = "*"
llama-index-embeddings-huggingface = "^0.1.0"
llama-index-llms-huggingface = "^0.1.0"
azure-storage-blob = "^12.19.0"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
trulens-eval = "^0.32.0"
nemoguardrails = { git = "https://github.com/NVIDIA/NeMo-Guardrails.git", branch = "develop" }
langchainhub = "^0.1.15"

# From LangChain optional deps, needed by WebBaseLoader
beautifulsoup4 = "^4"

ragstack-ai-langchain = { path = "../langchain", develop = false, extras = ["colbert", "google", "nvidia"] }
ragstack-ai-llamaindex = { path = "../llamaindex", develop = false, extras = ["colbert", "google", "azure", "bedrock"] }
ragstack-ai-colbert = { path = "../colbert", develop = false }

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 250

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
