[tool.poetry]
name = "ragstack-ai-knowledge-store"
version = "0.0.5"
description = "DataStax RAGStack Graph Store"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_knowledge_store" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
cassio = "^0.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
mypy = "^1.10.0"
pytest-asyncio = "^0.23.6"
ipykernel = "^6.29.4"
testcontainers = "~3.7.1"
setuptools = "^70.0.0"
python-dotenv = "^1.0.1"

# Resolve numpy version for 3.8 to 3.12+
numpy = [
    {version = ">1,<2", python = "<3.12"},
    {version = ">1.26.0,<2", python = ">=3.12"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 98

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"