[tool.poetry]
name = "ragstack-ai-knowledge-store"
version = "0.2.1"
description = "DataStax RAGStack Graph Store"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_knowledge_store" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cassio = "^0.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
mypy = "^1.10.0"
pytest-asyncio = "^0.23.6"
ipykernel = "^6.29.4"
testcontainers = "~3.7.1"
python-dotenv = "^1.0.1"

# Resolve numpy version for 3.8 to 3.12+
numpy = [
    {version = ">1,<2", python = "<3.12"},
    {version = ">1.26.0,<2", python = ">=3.12"}
]

[tool.poetry.group.test.dependencies]
ragstack-ai-langchain = { path = "../langchain", develop = true }
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "simsimd.*,cassandra.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
