[tool.poetry]
name = "ragstack-ai-langchain"
version = "1.0.7"
description = "DataStax RAGStack Langchain"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_langchain" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
astrapy = "^1"
cassio = "~0.1.4"
unstructured = "0.14.2"
ragstack-ai-colbert = "1.0.5"

# langchain
langchain = "0.1.19"
langchain-core = "0.1.52"
langchain-community = "0.0.38"
langchain-astradb = "0.3.3"
langchain-openai = "0.1.3"
langchain-google-genai = { version = "0.0.11", optional = true }
langchain-google-vertexai = { version = "1.0.1", optional = true }
langchain-nvidia-ai-endpoints = { version = "0.0.9", optional = true }

[tool.poetry.extras]
colbert = ["ragstack-ai-colbert"]

google = ["langchain-google-genai", "langchain-google-vertexai"]
nvidia = ["langchain-nvidia-ai-endpoints"]

[tool.poetry.group.test.dependencies]
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }
ragstack-ai-colbert = { path = "../colbert", develop = true }
pytest-asyncio = "^0.23.6"

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"

