[tool.poetry]
name = "ragstack-ai-langflow"
version = "0.0.1"
description = "DataStax RAGStack LangFlow"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
astrapy = "^1"
cassio = "~0.1.4"
ragstack-ai-langchain = "1.1.1"
langflow = { version = "1.0.0a50", allow-prereleases = true}

[tool.poetry.group.test.dependencies]
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"