[tool.poetry]
name = "ragstack-ai-langflow"
version = "0.0.1"
description = "DataStax RAGStack LangFlow"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_langflow" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
astrapy = "^1"
cassio = "~0.1.4"
ragstack-ai-langchain = "1.1.1"
langflow = { version = "1.0.0a59", allow-prereleases = true, extras = ["deploy", "cassio", "couchbase"] }
# tenacity 8.4.0 is broken https://github.com/jd/tenacity/issues/471
tenacity = ">=8.1.0,!=8.4.0"

[tool.poetry.group.test.dependencies]
ragstack-ai-tests-utils = { path = "../tests-utils", develop = true }

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"