[tool.poetry]
name = "ragstack-ai-langchain"
version = "0.1.0"
description = "RAGStack LangChain"
license = ""
authors = ["DataStax"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = { version = "0.0.343", extras = ["openai"] }
langchain-core = "0.0.8"
astrapy = "^0.6"
cassio = ">=0.1.3,<0.2.0"
unstructured = "^0.10"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

