[tool.poetry]
name = "ragstack-ai-llamaindex"
version = "0.1.0"
description = "RAGStack Llama-Index"
license = ""
authors = ["DataStax"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
llama-index = "0.9.11"
astrapy = "~0.6.2"
cassio = "~0.1.3"
unstructured = "^0.10"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
