[tool.poetry]
name = "ragstack-ai-ragulate"
version = "0.0.13"
description = "A tool for evaluating RAG pipelines"
license = "Apache 2.0"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_ragulate" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
trulens-eval = ">=0.31"
kaleido = "0.2.1"
inflection = "^0.5.1"
llama-index-core = "^0.10.31"
numpy = ">=1.23.5"
pandas = ">=2.2.2"
plotly = "^5.22.0"
python-dotenv = ">=1.0.0"
tqdm = ">=4.66.1"
pyyaml = "^6.0.1"
cerberus = "^1.3.5"
pydantic = "^2.7.4"
setuptools = "^70.0.0"
aiofiles = "^24.1.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
langchain-astradb = "0.3.3"
langchain-community = "0.0.38"
langchain-core = "0.1.52"
langchain-openai = "0.1.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ragulate = "ragstack_ragulate.cli:main"
test_unit = "scripts.test_unit_runner:main"
test_integration = "scripts.test_integration_runner:main"
